--- a/affiliate.html
+++ b/affiliate.html
@@ -6,13 +6,15 @@
   <title>Kortex Affiliate Program - Earn 10% Recurring Commission</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="icons/icon128.png">
-  <script type="module" crossorigin src="./assets/affiliate-CX89vHL0.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <link rel="icon" type="image/png" href="icons/icon128.png">
+
+  <script type="module" crossorigin src="./assets/affiliate-D1YVkAbZ.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-UmNlScXc.js">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-BjaalWmw.js">
   <link rel="modulepreload" crossorigin href="./assets/faqs-DLWmK525.js">
-  <link rel="modulepreload" crossorigin href="./assets/landing-BlEhn6jV.js">
+  <link rel="modulepreload" crossorigin href="./assets/landing-BxDwQTor.js">
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
@@ -159,7 +161,7 @@
         </div>
         <div class="bg-white/60 rounded-2xl p-6 border border-slate-200">
           <h4 class="font-bold text-lg text-slate-900 mb-2">When do payouts happen?</h4>
-          <p class="text-slate-600">Payouts are processed monthly for commissions earned in the previous month, provided you've reached the minimum payout threshold of $50.</p>
+          <p class="text-slate-600">Payouts are processed monthly for commissions earned in the previous month, provided you've reached the minimum payout threshold of $100.</p>
         </div>
         <div class="bg-white/60 rounded-2xl p-6 border border-slate-200">
           <h4 class="font-bold text-lg text-slate-900 mb-2">How are referrals tracked?</h4>
@@ -246,6 +248,7 @@
       </form>
     </div>
   </div>
-
+
+
 </body>
 </html>
