privacy policy updated

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -66,10 +66,10 @@
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="icons/icon128.png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-BjaalWmw.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
 </head>
 <body>
@@ -78,7 +78,7 @@
 
     <div class="container">
         <h1>Privacy Policy for Kortex</h1>
-        <p><strong>Effective Date:</strong> <span id="effective-date">August 2025</span></p>
+        <p><strong>Effective Date:</strong> <span id="effective-date">February 3, 2026</span></p>
 
         <p>Thank you for using Kortex. This privacy policy explains how our browser extension collects, uses, and protects your information.</p>
 
@@ -100,6 +100,7 @@
             <li><strong>Usage Reset Dates:</strong> Monthly reset dates for usage limits</li>
             <li><strong>Feature Usage Tracking:</strong> General usage statistics for improving the service</li>
         </ul>
+        <p><strong>Lifetime Subscriptions:</strong> “Lifetime” access means access for as long as the developer can reasonably support and maintain the project and as long as required third-party and reverse-engineered APIs continue to function. If those APIs change, become unavailable, or stop working, certain features (including transfer/export functionality) may be limited or unavailable.</p>
 
         <h3>1.3 Content Data</h3>
         <p>To sync your data across devices, we store:</p>
@@ -110,11 +111,10 @@
         <p><strong>Note:</strong> Your chat conversation content itself is not stored on our servers. Conversation data is only processed in memory during the transfer to your NotebookLM account and is not saved by Kortex.</p>
 
         <h3>1.4 Payment Information</h3>
-        <p>When you purchase a subscription or prepaid credits:</p>
+        <p>When you purchase a subscription:</p>
         <ul>
             <li><strong>Payment Customer ID:</strong> A reference ID from our payment processor (Dodo Payments) to manage your subscription</li>
             <li><strong>Subscription Status:</strong> Your subscription tier and status</li>
-            <li><strong>Prepaid Credits Balance:</strong> Your current prepaid credits balance</li>
         </ul>
         <p><strong>Important:</strong> Kortex does not store credit card numbers or sensitive payment details. All payment processing is handled securely by Dodo Payments, our third-party payment processor.</p>
 
@@ -128,6 +128,7 @@
             <li><strong>Improve the Service:</strong> Use aggregated usage statistics to enhance Kortex features and performance</li>
             <li><strong>Communicate with You:</strong> Send important service updates and respond to support inquiries</li>
         </ul>
+        <p><strong>No AI Training:</strong> We do not use your personal information, prompts, source views, or chat conversation data to train machine learning or AI models.</p>
 
         <h2>3. Data Storage and Location</h2>
         <h3>3.1 Cloud Storage (Firestore)</h3>
@@ -159,6 +160,7 @@
             <li><strong>Legal Requirements:</strong> We may disclose information if required by law or to protect our rights and the safety of our users</li>
             <li><strong>Your NotebookLM Account:</strong> Chat conversation data you choose to export is transferred to your own Google NotebookLM account, which you control</li>
         </ul>
+        <p><strong>Business Transfers:</strong> If Kortex is acquired, merged, or its assets are transferred to another entity, that acquiring entity may receive and continue processing the information described in this policy to operate the service. From that point onward, the acquiring entity will be responsible for the service and for handling your data going forward under their applicable privacy policy.</p>
 
         <h2>6. Data Security</h2>
         <p>We implement industry-standard security measures to protect your information:</p>
