--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <title>Kortex - Transform NotebookLM into Your Knowledge Hub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-Rgzi9sF6.js"></script>
   <script type="module" crossorigin src="./assets/faqs-DLWmK525.js"></script>
-  <script type="module" crossorigin src="./assets/landing-BlEhn6jV.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
+  <script type="module" crossorigin src="./assets/landing-VtMGcjhx.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -83,16 +82,16 @@
               <img class="w-12 h-12 rounded-full border-4 border-white shadow-sm" src="https://i.pravatar.cc/150?img=33" alt="user">
               <img class="w-12 h-12 rounded-full border-4 border-white shadow-sm" src="https://i.pravatar.cc/150?img=34" alt="user">
             </div>
-            <p class="text-sm font-black text-slate-400 tracking-wider uppercase">Loved by 28k+ Users</p>
+            <p class="text-sm font-black text-slate-400 tracking-wider uppercase">Loved by 32k+ Users</p>
           </div>
         </div>
 
         <!-- YouTube Video Thumbnail -->
         <div id="tutorial-video" class="max-w-4xl mx-auto mt-20">
-          <a href="https://www.youtube.com/watch?v=n0OTjIAL-WY" target="_blank" class="block relative group">
+          <a href="https://www.youtube.com/watch?v=4_BwryXW8Mg" target="_blank" class="block relative group">
             <div class="relative bg-gray-900 rounded-3xl overflow-hidden aspect-video shadow-2xl">
               <img 
-                src="https://img.youtube.com/vi/n0OTjIAL-WY/maxresdefault.jpg" 
+                src="https://img.youtube.com/vi/4_BwryXW8Mg/maxresdefault.jpg" 
                 alt="Kortex Tutorial Video"
                 class="w-full h-full object-cover"
               >
@@ -106,6 +105,10 @@
             </div>
             <p class="text-center text-sm text-slate-500/70 mt-4 font-semibold group-hover:text-emerald-600 transition-colors">Watch on YouTube</p>
           </a>
+          <p class="text-center text-xs text-slate-500/70 mt-2 font-semibold">
+            Credit:
+            <a href="https://www.youtube.com/@PaulJLipsky" target="_blank" rel="noopener noreferrer" class="underline underline-offset-4 hover:text-emerald-600 transition-colors">youtube.com/@PaulJLipsky</a>
+          </p>
         </div>
       </div>
     </section>
@@ -619,7 +622,7 @@
     <section class="py-24 px-6 relative">
       <div id="review-card" class="max-w-2xl mx-auto bg-white/80 backdrop-blur-md p-8 rounded-[2.5rem] border border-slate-200/60 shadow-xl shadow-emerald-100/30 cursor-pointer hover:shadow-2xl hover:shadow-emerald-100/50 transition-all duration-300">
         <div class="flex items-center gap-4 mb-4">
-          <img src="https://lh3.googleusercontent.com/a-/ALV-UjWMXxbNm5RBnMlUiVFT4ufgf-Jj_uMpsZEtUYnGlUHYmyO0eZgQ=s96-w96-h96" alt="Steve Lang" class="w-16 h-16 rounded-full object-cover">
+          <div class="w-16 h-16 rounded-full bg-slate-100 border border-slate-200 flex items-center justify-center font-black text-slate-700">SL</div>
           <div>
             <div class="flex items-center gap-2 mb-1">
               <p class="font-black text-slate-900 text-lg">Steve Lang</p>
@@ -816,7 +819,6 @@
       </div>
     </div>
   </div>
-
-
+
 </body>
 </html>
