--- a/support.html
+++ b/support.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-UmNlScXc.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-Rgzi9sF6.js"></script>
   <script type="module" crossorigin src="./assets/faqs-DLWmK525.js"></script>
-  <script type="module" crossorigin src="./assets/landing-BlEhn6jV.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
+  <script type="module" crossorigin src="./assets/landing-VtMGcjhx.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
@@ -40,7 +40,7 @@
       <!-- Support Options -->
       <div class="grid md:grid-cols-3 gap-6 mb-20">
         <!-- Read the docs card -->
-        <a href="#" id="open-docs-link" class="bg-white/80 backdrop-blur-md rounded-2xl border border-slate-200/60 hover:border-emerald-200/60 hover:shadow-lg hover:shadow-emerald-50/50 transition-all duration-300 p-8 group">
+        <a href="docs/" id="open-docs-link" class="bg-white/80 backdrop-blur-md rounded-2xl border border-slate-200/60 hover:border-emerald-200/60 hover:shadow-lg hover:shadow-emerald-50/50 transition-all duration-300 p-8 group">
           <div class="w-12 h-12 bg-amber-100 rounded-xl flex items-center justify-center mb-4 group-hover:scale-110 transition-transform">
             <svg class="w-6 h-6 text-amber-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
