--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -66,11 +66,11 @@
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="icons/icon128.png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-BjaalWmw.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-Zv4DfMvo.css">
+  <script type="module" crossorigin src="./assets/navbar-Rgzi9sF6.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
 </head>
 <body>
   <!-- Navbar will be injected by navbar.js -->
