--- a/affiliate.html
+++ b/affiliate.html
@@ -8,11 +8,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
-  <script type="module" crossorigin src="./assets/affiliate-Hg9PGC9j.js"></script>
+  <script type="module" crossorigin src="./assets/affiliate-DgfHkboU.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
   <link rel="modulepreload" crossorigin href="./assets/navbar-Rgzi9sF6.js">
-  <link rel="modulepreload" crossorigin href="./assets/faqs-DLWmK525.js">
-  <link rel="modulepreload" crossorigin href="./assets/landing-VtMGcjhx.js">
+  <link rel="modulepreload" crossorigin href="./assets/faqs-DOaRvURR.js">
+  <link rel="modulepreload" crossorigin href="./assets/landing-_tLaiJT6.js">
   <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
