--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
   <script type="module" crossorigin src="./assets/navbar-Rgzi9sF6.js"></script>
-  <script type="module" crossorigin src="./assets/faqs-DLWmK525.js"></script>
-  <script type="module" crossorigin src="./assets/landing-VtMGcjhx.js"></script>
+  <script type="module" crossorigin src="./assets/faqs-DOaRvURR.js"></script>
+  <script type="module" crossorigin src="./assets/landing-_tLaiJT6.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
