--- a/affiliate.html
+++ b/affiliate.html
@@ -8,12 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
-  <script type="module" crossorigin src="./assets/affiliate-CSoC0ikn.js"></script>
+  <script type="module" crossorigin src="./assets/affiliate-DoACt7v_.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-Rgzi9sF6.js">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-COk0BZt0.js">
   <link rel="modulepreload" crossorigin href="./assets/faqs-ONgDkD1M.js">
-  <link rel="modulepreload" crossorigin href="./assets/landing-CU5B7P55.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
+  <link rel="modulepreload" crossorigin href="./assets/landing-zB-xZwMh.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-DL1LDSZN.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
