--- a/customer-love.html
+++ b/customer-love.html
@@ -492,10 +492,10 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/customer-love-Zm9_XU5v.js"></script>
+  <script type="module" crossorigin src="./assets/customer-love-CQxaw5PJ.js"></script>
   <link rel="modulepreload" crossorigin href="./assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="./assets/navbar-Rgzi9sF6.js">
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
+  <link rel="modulepreload" crossorigin href="./assets/navbar-COk0BZt0.js">
+  <link rel="stylesheet" crossorigin href="./assets/navbar-DL1LDSZN.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Navbar will be injected by navbar.js -->
