--- a/support.html
+++ b/support.html
@@ -9,10 +9,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="icons/icon128.png">
   <script type="module" crossorigin src="./assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-  <script type="module" crossorigin src="./assets/navbar-Rgzi9sF6.js"></script>
+  <script type="module" crossorigin src="./assets/navbar-COk0BZt0.js"></script>
   <script type="module" crossorigin src="./assets/faqs-ONgDkD1M.js"></script>
-  <script type="module" crossorigin src="./assets/landing-CU5B7P55.js"></script>
-  <link rel="stylesheet" crossorigin href="./assets/navbar-C_KUnbIE.css">
+  <script type="module" crossorigin src="./assets/landing-zB-xZwMh.js"></script>
+  <link rel="stylesheet" crossorigin href="./assets/navbar-DL1LDSZN.css">
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 font-sans selection:bg-emerald-600 selection:text-white antialiased">
   <!-- Background Blobs -->
